# Turn-Player

./: README.md  package-lock.json  package.json  vite.config.js
src/: Turn Player.code-workspace  index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_processor.rs  lib.rs  main.rs
